[package]
name = "bens-games"
version = "0.1.0"
edition = "2024"

[dependencies]
gray_matter = { version = "0.3.2", default-features = false, features = ["toml"] }
maud = "0.27.0"
path-slash = "0.2.1"
pulldown-cmark = { version = "0.13.0", default-features = false, features = ["html", "simd"] }
serde = "1.0.228"
serde_derive = "1.0.228"
toml = "0.9.8"
